Fix z-index on login screen and update login-button color

--- a/assets/common.scss
+++ b/assets/common.scss
@@ -3,6 +3,8 @@ $color-dark:            #201F1E;
 $color-accent:          #4A8ECC;
 $color-accent-light:    #4FB1F4;
 $color-accent-alt:      #A66BE5;
+$color-accent-alt:      #A66BE5;
+$color-btn-confirm:     #E1670E;
 $text-color:            #DEDEDE;
 $text-color1:           #999999;
 $text-color2:           #666666;
